--- a/src/main/resources/assets/devilcraft/lang/en_us.json
+++ b/src/main/resources/assets/devilcraft/lang/en_us.json
@@ -19,6 +19,12 @@
   "item.devilcraft.devil_meat": "Devils Meat",
   "item.devilcraft.devil_horns": "Satan's Horns",
 
+  "item.devilcraft.evil_sword": "Evil Sword",
+  "item.devilcraft.evil_pickaxe": "Evil Pickaxe",
+  "item.devilcraft.evil_axe": "Evil Axe",
+  "item.devilcraft.evil_shovel": "Evil Shovel",
+  "item.devilcraft.evil_hoe": "Evil Hoe",
+
   "block.devilcraft.very_evil_block": "Very Evil Block",
   "block.devilcraft.pure_evil_block": "Block Of Pure Evil",
   "block.devilcraft.evil_block": "Block Of Evil",
