--- a/src/main/resources/assets/devilcraft/lang/en_us.json
+++ b/src/main/resources/assets/devilcraft/lang/en_us.json
@@ -25,6 +25,11 @@
   "item.devilcraft.evil_shovel": "Evil Shovel",
   "item.devilcraft.evil_hoe": "Evil Hoe",
 
+  "item.devilcraft.evil_helmet": "Evil Helmet",
+  "item.devilcraft.evil_chestplate": "Evil Chestplate",
+  "item.devilcraft.evil_leggings": "Evil Leggings",
+  "item.devilcraft.evil_boots": "Evil Boots",
+
   "block.devilcraft.very_evil_block": "Very Evil Block",
   "block.devilcraft.pure_evil_block": "Block Of Pure Evil",
   "block.devilcraft.evil_block": "Block Of Evil",
