--- a/src/main/resources/assets/devilcraft/lang/en_us.json
+++ b/src/main/resources/assets/devilcraft/lang/en_us.json
@@ -34,6 +34,8 @@
 
   "item.devilcraft.evil_spirit_spawn_egg": "Evil Spirit Spawn Egg",
 
+  "entity.devilcraft.evil_spirit": "Evil Spirit",
+
   "block.devilcraft.evil_rose": "Evil Rose",
 
   "block.devilcraft.very_evil_block": "Very Evil Block",
