--- a/src/main/resources/assets/devilcraft/lang/en_us.json
+++ b/src/main/resources/assets/devilcraft/lang/en_us.json
@@ -56,7 +56,7 @@
   "block.devilcraft.evil_dirt":"Evil Dirt",
   "block.devilcraft.evil_grass":"Evil Grass",
   "block.devilcraft.evil_slab":"Evil Slab",
-  "block.devilcraft.evil_fence_gate":"Evil Fence gate",
+  "block.devilcraft.evil_fence_gate":"Evil Fence Gate",
   "block.devilcraft.evil_door":"Evil Door",
   "block.devilcraft.evil_trapdoor":"Evil Trapdoor",
 
@@ -65,6 +65,8 @@
   "block.devilcraft.stripped_evil_wood":"Stripped Evil Wood",
   "block.devilcraft.evil_leaves":"Evil Leaves",
 
+  "block.devilcraft.evil_sign":"Evil Sign",
+  "block.devilcraft.evil_hanging_sign":"Evil Hanging Sign",
 
   "block.devilcraft.altar_block":"Evil Altar",
 
